plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

ext {
	springCloudVersion = "2023.0.2"
}

group = 'ru.ravel'
version = '0.1'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

dependencies {
//	core
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation "org.springframework.security:spring-security-messaging"
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.session:spring-session-core'
	implementation 'org.springframework.session:spring-session-jdbc'

//	db
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.flywaydb:flyway-core'
	runtimeOnly 'org.flywaydb:flyway-database-postgresql'

//	FeignClient
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation 'io.github.openfeign:feign-httpclient'
	implementation 'io.github.openfeign:feign-okhttp'

//	lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

//	logs
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'ch.qos.logback:logback-classic'
	implementation 'io.prometheus:simpleclient'
	implementation 'io.prometheus:simpleclient_hotspot'
	implementation 'io.prometheus:simpleclient_logback'
	implementation 'io.prometheus:simpleclient_httpserver'
	implementation 'com.google.flogger:flogger:0.8'
	implementation 'com.google.flogger:flogger-system-backend:0.8'
	implementation 'com.google.flogger:flogger-slf4j-backend:0.4'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.3.1'

//	minio
	implementation 'io.minio:minio:8.5.10'
	implementation 'commons-io:commons-io:2.16.1'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

//	thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

//	websocket
	implementation 'org.springframework:spring-messaging'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.webjars:webjars-locator-core'
	implementation 'org.webjars:sockjs-client:1.0.2'
	implementation 'org.webjars:stomp-websocket:2.3.3'

//	telegram
	implementation 'com.github.pengrad:java-telegram-bot-api:7.2.0'

//	email
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.jsoup:jsoup:1.15.3'
	implementation 'com.microsoft.ews-java-api:ews-java-api:2.0'

//	webp
//	implementation 'org.sejda.imageio:webp-imageio:0.1.6'

//	tests
	implementation 'org.junit.jupiter:junit-jupiter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'junit:junit'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
